5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1650_2730.log
== TEST (2019-04-06 15:09:55) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y>0):
         print("Superiores")
		else:
			if(x<0 and y<0):
            print("Inferiores")
-- ERROR:
File "XXXX", line 10
    print("Superiores")
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 15:10:25) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y>0):
         print("Superiores")
		else:
			if(x<0 and y<0):
            print("Inferiores")
-- ERROR:
File "XXXX", line 10
    print("Superiores")
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 15:10:59) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y<0):
         print("Inferiores")
-- ERROR:
File "XXXX", line 10
    print("Inferiores")
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 15:11:12) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 15:11:45) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y>0):
			print("Superiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 15:12:03) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y>0):
			print("Superiores")
		else:
			print("Inferiores")
-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-06 15:12:18) 
-- CODE:
x=float(input("Digite a coordenada x : "))
y=float(input("Digite a coordenada y : "))
if(x>0 and y>0):
   print("Superiores")
else:
	if(x>0 and y<0):
		print("Inferiores")
	else:
		if(x<0 and y>0):
			print("Superiores")
		else:
			print("Inferiores")
-- EXECUTION TIME:
0.167298
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
